--- a/styles/base.css
+++ b/styles/base.css
@@ -169,7 +169,7 @@ p {
     flex-shrink: 0;
     background: var(--base);
     border-radius: 0 0 8px 8px;
-    padding: 2rem;
+    padding: 6rem 2rem;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     min-height: 100vh;
 }
